Added Classic Vocal Trance stream so the other config file changes will work.

--- a/etc/audio.yaml
+++ b/etc/audio.yaml
@@ -1,2 +1,3 @@
 streams:
-  di_chillout_dreams: aac://prem1.di.fm:80/chilloutdreams?3f36a1cf2344bce4513aa7af
+  di_chillout_dreams: aac://prem1.di.fm:80/chilloutdreams?keygoeshere
+  di_classic_vocal_trance: aac://prem1.di.fm:80/classicvocaltrance?keygoeshere
