Turn the bedroom light on and start music when it's time to wake up.

--- a/etc/scenes.yaml
+++ b/etc/scenes.yaml
@@ -17,6 +17,12 @@ Sleep:
   lighting:
     bedroom_light: off
 WakeUp:
+  lighting:
+    bedroom_light: on
   audio:
-    transport:
-      all: stop
+    group:
+      - Bedroom
+      - Bathroom
+    content:
+      Bedroom: di_classic_vocal_trance
+      
