--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,4 @@ t.rb
 
 # config files have a lot of secret keys in them, will commit manually where
 # needed but don't want to be bugged every time
-etc/
+etc/*
