Fixing capitalization on scenes. Maybe this should be case-insensitive?

--- a/etc/alarm_clock.yaml
+++ b/etc/alarm_clock.yaml
@@ -9,9 +9,9 @@ schedule:
     saturday:   "0930"
     sunday:     "0930"
 actions:
-  wakeup:
+  WakeUp:
     offset: 0
-  beforework:
+  BeforeWork:
     offset: +55
     only_on:
       - Monday
